[tool.poetry]
name = "itunes-tag-sync"
version = "0.1.0"
description = ""
authors = ["Sergei Dyshel <qyron.private@gmail.com>"]
readme = "README.md"
packages = [{include = "itunes_tag_sync"}]

[tool.poetry.dependencies]
python = "^3.10"
pywin32 = "^304"
typer = "^0.6.1"
eyed3 = "^0.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
